<resources>
    <string name="app_name">Walacoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_codigo">Id del Vehículo </string>
    <string name="txt_descripcion">Marca del Vehículo </string>
    <string name="txt_precio">Precio del vehículo </string>
    <string name="BotonRegistrar">Registrar vehículo </string>
    <string name="BotonBuscar">Buscar vehículo </string>
    <string name="BotonEliminar">Eliminar vehículo </string>
    <string name="BotonModificar">Modificar vehículo </string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>

</resources>